--- a/clase-6/tarea-1.html
+++ b/clase-6/tarea-1.html
@@ -3,23 +3,24 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Tarea 1 - Clase 6</title>
+    <title>Task 1 - Class 6</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="tarea-1.css" />
   </head>
   <body id="body">
-    <form id="formularios-grupo-familiar">
-      <label for="cantidad-integrantes"
-        >Ingrese la cantidad de integrantes
-      </label>
-      <input id="cantidad-integrantes" type="number" />
-      
-      <div id="contenedor-integrantes"></div>
-      <button id="enviar-datos"><label class="label-clase">Enviar</label></button>
-      <button id="calcular"><label class="label-clase">Calcular</label></button>
-      <button id="limpiar"><label class="label-clase">Limpiar</label></button>
+    <form id="familary-group-formulary">
+      <h1 id="tittle">FAMILY MEMBERS</h1>
+      <label for="">Enter the amount of members </label>
+      <input id="number-members" type="number" />
 
-      <p id="resultado"></p>
+      <div id="container-members"></div>
+      <button id="send-data"><label class="label-clase">Send</label></button>
+      <button id="calculate">
+        <label class="label-clase">Calculate</label>
+      </button>
+      <button id="clean"><label class="label-clase">Clean</label></button>
+
+      <p id="result"></p>
 
       <ul id="errores"></ul>
     </form>
