--- a/clase-6/tarea-1.html
+++ b/clase-6/tarea-1.html
@@ -9,23 +9,36 @@
   </head>
   <body id="body">
     <form id="familary-group-formulary">
+
       <h1 id="tittle">FAMILY MEMBERS</h1>
+
       <label for="">Enter the amount of members </label>
+
       <input id="number-members" type="number" />
 
-      <div id="container-members"></div>
-      <button id="send-data"><label class="label-clase">Send</label></button>
+      <div id="container-members">
+        <ul id="list-of-members"></ul>
+      </div>
+
+      <button id="send-data">
+        <label class="label-clase">Send</label>
+      </button>
+
       <button id="calculate">
         <label class="label-clase">Calculate</label>
       </button>
-      <button id="clean"><label class="label-clase">Clean</label></button>
+
+      <button id="clean">
+        <label class="label-clase">Clean</label>
+      </button>
 
       <p id="result"></p>
 
-      <ul id="errores"></ul>
+      <ul id="errors"></ul>
     </form>
 
-    <script src="tarea-1-calculos.js"></script>
     <script src="tarea-1.js"></script>
+    <script src="tarea-1-calculos.js"></script>
+    <script src="tarea-1-pruebas.js"></script>
   </body>
 </html>
