--- a/index.html
+++ b/index.html
@@ -1,20 +1,45 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Task 2 - Class 6</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='tarea-2.css'>
-    
-</head>
-<body>
-    <img id= "image-background" src="https://i.ibb.co/JC4tgxk/C4-FC07341.jpg">
-    <form id="members-salary">
-        <h1 class="tittle">Add family members and then your annual salary</h1>
-        <button type="button"id="add-member">Add member</button>
-        <button type="button"id="remove-member">Remove member</button>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Task 1 v2.0 - Class 6</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" media="screen" href="tarea-1.css" />
+  </head>
+  <body id="body">
+    <form id="familary-group-formulary" onkeypress="return anular(event)">
+      <h1 id="tittle">Age form of family members</h1>
+
+      <div id="amount-of-members">
+        <h2>Enter the amount of family members: </h2>
+
+        <input id="number-members" type="number" />
+      </div>
+
+      <div id="container-members">
+        <ul id="list-of-members"></ul>
+      </div>
+
+      <button id="button-send-data">
+        <label class="label-clase">Send</label>
+      </button>
+
+      <button id="button-calculate">
+        <label class="label-clase">Calculate</label>
+      </button>
+
+      <button id="button-clean">
+        <label class="label-clase">Clean</label>
+      </button>
+
+      <p id="result"></p>
+
+      <ul id="errors"></ul>
     </form>
-    <script src='tarea-2.js'></script>
-</body>
+
+    <script src="tarea-1.js"></script>
+    <script src="tarea-1-calculos.js"></script>
+    <script src="tarea-1-pruebas.js"></script>
+  </body>
 </html>
