Added validate of annualSalary

--- a/clase-6/tarea-2.html
+++ b/clase-6/tarea-2.html
@@ -14,6 +14,8 @@
         <button type="button"id="add-member">Add member</button>
         <button type="button"id="remove-member">Remove member</button>
     </form>
+    <script src='tarea-2-calculos.js'></script>
     <script src='tarea-2.js'></script>
+    <script src='tarea-2-pruebas.js'></script>
 </body>
 </html>
